manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway-service
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
